<resources>
    <string name="app_name">weather app</string>
    <string name="home">Home</string>
    <string name="favourit">Favourit</string>
    <string name="settings">Settings</string>
    <string name="alert">Alert</string>
    <string name="language">Language:</string>
    <string name="theme">Theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="temperature">Temperature:</string>
    <string name="current_weather">Current Weather</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="dayliy_weather">dayliy Weather</string>
</resources>