<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:checkable="true"
    />
    <item
        android:id="@+id/favouritFragment"
        android:title="@string/favourit"
        app:showAsAction="ifRoom"
        android:checkable="true"
        />
    <item
        android:id="@+id/alertFragment"
        android:title="@string/alert"
        app:showAsAction="ifRoom"
        android:checkable="true"
        />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:checkable="true"
        />

</menu>
