<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Current Weather Section -->
    <TextView
        android:id="@+id/textViewCurrentWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/current_weather"
        android:layout_marginBottom="8dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCurrentWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:elevation="4dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Image -->
            <ImageView
                android:id="@+id/imageViewWeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/weather" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewWeatherDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Partly Cloudy"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/imageViewWindIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/location" />
            </LinearLayout>

            <!-- Degree Text -->
            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20°C"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <!-- Hourly Weather Section -->
    <TextView
        android:id="@+id/textViewHourlyWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/hourly_weather"
        android:layout_marginBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHourlyWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textViewDailyWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/dayliy_weather"
        android:layout_marginBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDailyWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"/>



</LinearLayout>
